plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.141'
    id 'idea'
}

tasks.named('wrapper', Wrapper).configure {
    distributionType = Wrapper.DistributionType.BIN
}

version = mod_version
group = mod_group_id

sourceSets.main.resources {
    srcDir('src/generated/resources')

    exclude("**/*.bbmodel") // BlockBench project files
    exclude("src/generated/**/.cache") // datagen cache files
}

repositories {
    exclusiveContent {
        forRepository {
            maven {
                url = "https://viola-siemens.github.io/pages/maven/"
            }
        }
        filter {
            includeGroup "com.hexagram2021"
        }
    }
}

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(25)

neoForge {
    version = project.neo_version

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }

    unitTest {
        enable()
        testedMod = mods."${mod_id}"
    }

    runs {
        client {
            client()

            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            clientData()

            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'

            logLevel = org.slf4j.event.Level.DEBUG
        }
    }
}

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

test {
    useJUnitPlatform()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter:5.13.4'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.13.4'

    // AgentScope Java runtime (PRD §6.2): bundled via NeoForge JarInJar so addons/players need no separate install.
    // Version pinned to 2.0.1 per PRD; 2.0.1 confirmed present on Maven Central.
    jarJar(implementation("io.agentscope:agentscope-harness:2.0.1") {
        version {
            strictly '[2.0.0,)'
            prefer '2.0.1'
        }
    })
    jarJar(implementation("io.agentscope:agentscope-core:2.0.1") {
        version {
            strictly '[2.0.0,)'
            prefer '2.0.1'
        }
    })
    // WP-3: concrete model clients live in separate extension modules (core/harness ship no provider
    // implementations). Required for OpenAI-compatible and Anthropic profiles (PRD §4.3).
    jarJar(implementation("io.agentscope:agentscope-extensions-model-openai:2.0.1") {
        version {
            strictly '[2.0.0,)'
            prefer '2.0.1'
        }
    })
    jarJar(implementation("io.agentscope:agentscope-extensions-model-anthropic:2.0.1") {
        version {
            strictly '[2.0.0,)'
            prefer '2.0.1'
        }
    })
}

var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            neo_version_range      : neo_version_range,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_authors            : mod_authors,
            mod_description        : mod_description,
            mod_license            : mod_license,
            mod_version            : mod_version,
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
    from "LICENSE"
}

sourceSets.main.resources.srcDir generateModMetadata
neoForge.ideSyncTask generateModMetadata

tasks.register('sourceJar', Jar) {
    archiveClassifier.set('sources')
    from sourceSets.main.allJava
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
            artifact tasks.named('sourceJar')
        }
    }
    repositories {
        maven {
            url = uri("${project.projectDir}/repo")
        }
    }
}

artifacts {
    archives sourceJar
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}

// IDEA no longer automatically downloads sources/javadoc jars for dependencies, so we need to explicitly enable the behavior.
idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}